fix z-index to stay over the nav even is active

--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -3,6 +3,7 @@
     position: absolute
     text-align: left
     padding: 3em 1em 1em 1em
+    z-index: 1751
 
     & .menu-services-container
         background: var(--background-default-grey)
